New colours for timeline filter

--- a/css/base/_forms.scss
+++ b/css/base/_forms.scss
@@ -84,7 +84,7 @@ select {
 	padding: 0 $small-spacing;
 	border-radius: $base-border-radius;
 
-	font-size: em(14);
+	// font-size: em(14);
 	font-weight: 200;
 
 	&:focus {
