--- a/css/styles.css
+++ b/css/styles.css
@@ -889,16 +889,25 @@ section.controls {
   z-index: 14;
   width: 100%;
   background-color: transparent;
-  padding: 0; }
+  padding: 0;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch; }
   section.controls .checkbox {
-    float: left;
-    display: block;
-    margin-right: 0%;
-    width: 100%; }
-    section.controls .checkbox:last-child {
-      margin-right: 0; }
+    min-width: 730px; }
     section.controls .checkbox label {
       display: inline-block; }
+      section.controls .checkbox label hr {
+        display: inline-block;
+        margin: 0 0.375em 4px;
+        border-width: 2px;
+        border-color: #475957;
+        width: 40%; }
+        @media screen and (min-width: 62.5em) {
+          section.controls .checkbox label hr {
+            width: 50%; } }
+      section.controls .checkbox label.active hr {
+        border-color: #411A19; }
       section.controls .checkbox label .tooltip {
         top: 105%;
         bottom: inherit;
@@ -908,65 +917,50 @@ section.controls {
       @media screen and (min-width: 62.5em) {
         section.controls .checkbox label .tooltip {
           display: block; } }
-    section.controls .checkbox .options label {
-      float: left;
-      display: block;
-      margin-right: 0%;
-      width: 20%;
-      line-height: 6;
-      cursor: pointer;
-      margin-bottom: 0;
-      background-color: #7BB0AC;
-      color: #475957;
-      border-bottom: 1px solid #6ba6a2; }
-      section.controls .checkbox .options label:last-child {
-        margin-right: 0; }
-      section.controls .checkbox .options label:first-child:before {
-        content: "Dle období";
-        position: absolute;
-        line-height: 3;
-        left: 0.62em;
+    section.controls .checkbox .options {
+      min-width: 730px; }
+      section.controls .checkbox .options label {
+        line-height: 6;
+        cursor: pointer;
+        margin-bottom: 0;
+        float: left;
+        display: block;
+        margin-right: 0%;
+        width: 20%;
+        background-color: #7BB0AC;
         color: #475957;
-        font-weight: 200;
-        font-size: 0.62em;
-        text-transform: uppercase; }
-      section.controls .checkbox .options label.active:first-child:before {
-        color: #411A19; }
-      section.controls .checkbox .options label:not(:last-of-type) {
-        border-right: 1px solid #6ba6a2; }
-      section.controls .checkbox .options label:focus, section.controls .checkbox .options label:hover {
-        background-color: #6ba6a2;
-        color: #303d3b; }
-      section.controls .checkbox .options label.active {
-        background-color: #946563;
-        color: #411A19;
-        border-bottom: 1px solid #a07371; }
-    section.controls .checkbox .options input.option {
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      -ms-appearance: none;
-      -o-appearance: none;
-      appearance: none;
-      position: relative;
-      top: 0.375em;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      height: 1.125em;
-      width: 1.125em;
-      -webkit-transition: all 0.15s ease-out 0s;
-      -moz-transition: all 0.15s ease-out 0s;
-      transition: all 0.15s ease-out 0s;
-      border: none;
-      cursor: pointer;
-      display: none;
-      outline: none;
-      position: relative;
-      z-index: 1000; }
-      section.controls .checkbox .options input.option.radio {
-        border-radius: 50%; }
-        section.controls .checkbox .options input.option.radio::after {
-          border-radius: 50%; }
+        border-bottom: 1px solid #6ba6a2; }
+        section.controls .checkbox .options label:last-child {
+          margin-right: 0; }
+        @media screen and (min-width: 32.5em) {
+          section.controls .checkbox .options label {
+            float: left;
+            display: block;
+            margin-right: 0%;
+            width: 20%;
+            line-height: 6; }
+            section.controls .checkbox .options label:last-child {
+              margin-right: 0; } }
+        section.controls .checkbox .options label:first-child:before {
+          content: "Dle období";
+          position: absolute;
+          line-height: 3;
+          left: 0.62em;
+          color: #475957;
+          font-weight: 200;
+          font-size: 0.62em;
+          text-transform: uppercase; }
+        section.controls .checkbox .options label.active:first-child:before {
+          color: #411A19; }
+        section.controls .checkbox .options label:not(:last-of-type) {
+          border-right: 1px solid #6ba6a2; }
+        section.controls .checkbox .options label:focus, section.controls .checkbox .options label:hover {
+          background-color: #6ba6a2;
+          color: #303d3b; }
+        section.controls .checkbox .options label.active {
+          background-color: #946563;
+          color: #411A19;
+          border-bottom: 1px solid #a07371; }
 
 section.filters {
   position: fixed;
@@ -996,7 +990,7 @@ section.filters {
   -webkit-transition-timing-function: ease-in-out;
   -moz-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out; }
-  @media screen and (min-width: 30em) {
+  @media screen and (min-width: 32.5em) {
     section.filters {
       width: 60%; } }
   @media screen and (min-width: 45.625em) {
@@ -1275,11 +1269,10 @@ input.option {
   display: inline-block;
   outline: none;
   position: relative;
-  z-index: 1000; }
+  z-index: 1000;
+  display: none; }
   input.option:hover {
     background: #946563; }
-  input.option:checked {
-    background: #664644; }
   input.option.radio {
     border-radius: 50%; }
     input.option.radio::after {
@@ -1444,7 +1437,7 @@ header.intro {
   -webkit-transition-timing-function: ease-in-out;
   -moz-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out; }
-  @media screen and (min-width: 30em) {
+  @media screen and (min-width: 32.5em) {
     .infobox {
       bottom: 1.5em;
       right: 3em;
