--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -7,17 +7,17 @@ section.controls {
 	background-color: transparent;
 	padding: 0;
 	overflow-x: scroll;
-	overflow-y: hidden;
-	-webkit-overflow-scrolling: touch; // inertia scrolling in iOS	white-space: nowrap;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch; // inertia scrolling in iOS
+	white-space: nowrap;
+
+	@include media($medium-screen) {
+		overflow: initial;
+		white-space: normal;
+	}
 
 	.checkbox {
 		min-width: 730px;
-
-		@include media($large-screen) {
-			// @include span-columns(4);
-			// @include shift(1);
-			// border-right: 1px solid darken($dark-blue, 10%);
-		}
 
 		label {
 			display: inline-block;
