--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -49,6 +49,8 @@ header.intro {
 	&.hide,
 	&.hidden {
 		@include transform(translatey(calc(-100% + #{$base-spacing})));
+		-ms-transform: translateY(-100%) translateY($base-spacing);
+
 	}
 
 	&.hidden {
@@ -60,6 +62,8 @@ header.intro {
 
 	&.hidden:hover {
 		@include transform(translatey(calc(-100% + #{$base-spacing} * 2)));
+		-ms-transform: translateY(-100%) translateY($base-spacing * 2);
+
 
 		&:after,
 		> span {
