--- a/css/layout/_mapbox.scss
+++ b/css/layout/_mapbox.scss
@@ -17,6 +17,16 @@
 		background-color: white;
 		box-shadow: 1px 1px 3px rgba(0,0,0,0.11);
 		border-radius: $base-border-radius;
+
+		img {
+			opacity: 0.62;
+		}
+
+		&:hover {
+			img {
+				opacity: 0.95;
+			}
+		}
 	}
 
 	.infobox {
@@ -124,12 +134,5 @@
 					}
 				}
 			}
-
-			dl {
-				// -webkit-column-count: 2; /* Chrome, Safari, Opera */
-				// -moz-column-count: 2; /* Firefox */
-				// column-count: 2;
-			}
-
 		}
 	}
