--- a/css/base/_typography.scss
+++ b/css/base/_typography.scss
@@ -18,6 +18,12 @@ h6 {
 	line-height: $heading-line-height;
 	margin: 0 0 $small-spacing;
 }
+h6 {
+	font-weight: normal;
+	text-transform: uppercase;
+	font-size: 75%;
+	color: $light-gray;
+}
 
 p {
 	margin: 0 0 $small-spacing;
