--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -61,3 +61,9 @@ $base-border: 1px solid $base-border-color;
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $lightness: -5%, $alpha: -0.3);
+
+$tiny-screen: em(300);
+$small-screen: em(520);
+$medium-screen: em(765);
+$large-screen: em(1050);
+$x-large-screen: em(1250);
